--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="resources/css/index.css">
+    <link rel="stylesheet" href="/resources/css/index.css">
 </head>
 <body>
    
@@ -60,17 +60,17 @@ The Sky <br> used <br> to be a limit.
 </span>
 <span id="eclipse">
     <a href="https://www.eclipse.org/ide/">
-        <img src="/nu2/resources/imgs/IDE/EClipse.png" width="250" height="200" alt="">
+        <img src="/resources/imgs/IDE/EClipse.png" width="250" height="200" alt="">
     </a>
 </span>
 <span id="Sublime Text">
     <a href="https://www.sublimetext.com/">
-        <img src="/nu2/resources/imgs/IDE/Sublime text.png" width="200" height="200" alt="sublime editor icon">
+        <img src="/resources/imgs/IDE/Sublime text.png" width="200" height="200" alt="sublime editor icon">
     </a>
 </span>
 <span id="Intellij">
     <a href="https://www.jetbrains.com/idea/">
-        <img src="/nu2/resources/imgs/IDE/intellij-idea.256x253.png" alt="">
+        <img src="/resources/imgs/IDE/intellij-idea.256x253.png" alt="">
     </a>
 </span>
 </div>
